--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ greendao {
     targetGenDir 'src/main/java'   //  设置DaoMaster、DaoSession、Dao目录
 }
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.zhy:base-adapter:3.0.3'
     // AndroidBase
     compile 'com.github.moonlove95:AndroidBase:1.0.3'
+
 }
